--- a/TourGuide/pom.xml
+++ b/TourGuide/pom.xml
@@ -78,6 +78,17 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.2.5</version>
+				<configuration>
+					<forkCount>1C</forkCount>
+					<reuseForks>true</reuseForks>
+					<argLine>-Xmx512m -Xss256k</argLine>
+				</configuration>
+			</plugin>
+
 		</plugins>
 	</build>
 
