--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,49 +17,49 @@ build_job:
   image: maven:3.8.4-eclipse-temurin-17-alpine
   script:
     - |
-      & 'mvn compile \
-        -Dhttps.protocols=TLSv1.2 \
-        -Dmaven.repo.local=$CI_PROJECT_DIR/.m2/repository \
-        -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=WARN \
-        -Dorg.slf4j.simpleLogger.showDateTime=true \
-        -Djava.awt.headless=true \
-        --batch-mode --errors --fail-at-end --show-version -DinstallAtEnd=true -DdeployAtEnd=true'
+      mvn compile `
+        -Dhttps.protocols=TLSv1.2 `
+        -Dmaven.repo.local=$CI_PROJECT_DIR/.m2/repository `
+        -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=WARN `
+        -Dorg.slf4j.simpleLogger.showDateTime=true `
+        -Djava.awt.headless=true `
+        --batch-mode --errors --fail-at-end --show-version -DinstallAtEnd=true -DdeployAtEnd=true
 
 test-basic:
   stage: test-basic
   image: maven:3.8.4-eclipse-temurin-17-alpine
   script:
     - |
-      & 'mvn test -Dtest=TourguideApplicationTests,TestTourGuideService \
-        -Dhttps.protocols=TLSv1.2 \
-        -Dmaven.repo.local=$CI_PROJECT_DIR/.m2/repository \
-        -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=WARN \
-        -Dorg.slf4j.simpleLogger.showDateTime=true \
-        -Djava.awt.headless=true \
-        --batch-mode --errors --fail-at-end --show-version'
+      mvn test -Dtest=TourguideApplicationTests,TestTourGuideService `
+        -Dhttps.protocols=TLSv1.2 `
+        -Dmaven.repo.local=$CI_PROJECT_DIR/.m2/repository `
+        -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=WARN `
+        -Dorg.slf4j.simpleLogger.showDateTime=true `
+        -Djava.awt.headless=true `
+        --batch-mode --errors --fail-at-end --show-version
 
 test-rewards:
   stage: test-rewards
   image: maven:3.8.4-eclipse-temurin-17-alpine
   script:
     - |
-      & 'mvn test -Dtest=TestRewardsService \
-        -Dhttps.protocols=TLSv1.2 \
-        -Dmaven.repo.local=$CI_PROJECT_DIR/.m2/repository \
-        -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=WARN \
-        -Dorg.slf4j.simpleLogger.showDateTime=true \
-        -Djava.awt.headless=true \
-        --batch-mode --errors --fail-at-end --show-version'
+      mvn test -Dtest=TestRewardsService `
+        -Dhttps.protocols=TLSv1.2 `
+        -Dmaven.repo.local=$CI_PROJECT_DIR/.m2/repository `
+        -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=WARN `
+        -Dorg.slf4j.simpleLogger.showDateTime=true `
+        -Djava.awt.headless=true `
+        --batch-mode --errors --fail-at-end --show-version
 
 test-performance:
   stage: test-performance
   image: maven:3.8.4-eclipse-temurin-17-alpine
   script:
     - |
-      & 'mvn test -Dtest=TestPerformance \
-        -Dhttps.protocols=TLSv1.2 \
-        -Dmaven.repo.local=$CI_PROJECT_DIR/.m2/repository \
-        -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=WARN \
-        -Dorg.slf4j.simpleLogger.showDateTime=true \
-        -Djava.awt.headless=true \
-        --batch-mode --errors --fail-at-end --show-version'
+      mvn test -Dtest=TestPerformance `
+        -Dhttps.protocols=TLSv1.2 `
+        -Dmaven.repo.local=$CI_PROJECT_DIR/.m2/repository `
+        -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=WARN `
+        -Dorg.slf4j.simpleLogger.showDateTime=true `
+        -Djava.awt.headless=true `
+        --batch-mode --errors --fail-at-end --show-version
