--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,6 +25,8 @@ test-tourguide-and-rewards:
 
 test-performance:
   stage: test-performance
+  variables:
+    MAVEN_OPTS: "-Xmx4096m -Xms512m"
   image: maven:3.8.4-eclipse-temurin-17-alpine
   script:
     - cmd /C "mvn -T 2C test -Dtest=TestPerformance -Dhttps.protocols=TLSv1.2 -Dmaven.repo.local=$CI_PROJECT_DIR/.m2/repository -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=WARN -Dorg.slf4j.simpleLogger.showDateTime=true -Djava.awt.headless=true --batch-mode --errors --fail-at-end --show-version"
